--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </section>
         
         <main class="main-content">
-            <img class="img-main" src="images/wings.jpg" alt="Jordan shoe wings logo">
+            <img class="img-main" src="wings.jpg" alt="Jordan shoe wings logo">
             <h2>Air Jordan</h2>
             <span class="subheading"><a href="https://sneakernews.com/air-jordan-release-dates/" target="_blank"> upcoming jordan releases</a></span>
             
